[tool.poetry]
name = "usagi-garden.github.io"
version = "0.1.0"
description = "Personal blog and reflections"
authors = ["Usagi Garden <olivia.zouyujiao@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
mkdocs-material = "^9.7.0"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-redirects = "^1.2.2"
mkdocs = {extras = ["extra"], version = "^1.6.1"}
mkdocs-static-i18n = "^1.3.0"
pymdown-extensions = "^10.17.1"
markdown = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
